paddle, opponent and ball added

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,56 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 38,
+"scroll_position": 30.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 38,
+"selection_to_column": 35,
+"selection_to_line": 50,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/ball.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/opponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 40,
+"scroll_position": 30.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/main.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
