--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/opponent.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Sprites/paint_trail_2.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/paddle.tscn", "res://Scenes/ball.tscn", "res://Scenes/opponent.tscn")
-current_scene="res://Scenes/opponent.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/paddle.tscn", "res://Scenes/ball.tscn", "res://Scenes/opponent.tscn", "res://Scenes/trail.tscn")
+current_scene="res://Scenes/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/main.gd", "res://Scenes/opponent.gd", "res://Scenes/paddle.gd"]
-selected_script="res://Scenes/opponent.gd"
+open_scripts=["res://Scenes/ColorRect.gd", "res://Scenes/main.gd", "res://Scenes/opponent.gd", "res://Scenes/paddle.gd"]
+selected_script="res://Scenes/main.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
