--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Sprites/paint_trail_2.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/ball.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,18 +27,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/paddle.tscn", "res://Scenes/ball.tscn", "res://Scenes/opponent.tscn", "res://Scenes/trail.tscn")
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/paddle.tscn", "res://Scenes/ball.tscn", "res://Scenes/trail.tscn", "res://Scenes/opponent.tscn")
 current_scene="res://Scenes/main.tscn"
-center_split_offset=0
+center_split_offset=-255
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://Scenes/ColorRect.gd", "res://Scenes/main.gd", "res://Scenes/opponent.gd", "res://Scenes/paddle.gd"]
-selected_script="res://Scenes/main.gd"
-open_help=[]
+selected_script="res://Scenes/opponent.gd"
+open_help=["@GDScript", "Array"]
 script_split_offset=70
 list_split_offset=0
 
