--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Sprites/Elioth_Gruner_-_Spring_frost_-_Google_Art_Project.jpg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Sprites/buttons_hover.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Sprites/", "res://Scenes/Sprites/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/paddle.tscn", "res://Scenes/ball.tscn", "res://Scenes/trail.tscn", "res://Scenes/opponent.tscn", "res://Scenes/start.tscn")
 current_scene="res://Scenes/start.tscn"
-center_split_offset=-269
+center_split_offset=-278
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
